Fixed spacing

--- a/src/component/builder/builder.css
+++ b/src/component/builder/builder.css
@@ -25,6 +25,8 @@
   justify-content: space-between;
   padding-bottom: 5rem;
   border-bottom: 1px solid var(--clr-light);
+  max-width: 100em;
+  margin: 0 auto;
 }
 
 .builder1-child_container {
